--- a/index.html
+++ b/index.html
@@ -32,21 +32,20 @@
       <a href="#about" onclick="showSection('about')">Über mich</a>
       <a href="#projekte" onclick="showSection('projekte')">Projekte</a>
       <a href="#tools" onclick="showSection('tools')">Tools</a>
-      <a href="#lebenslauf" onclick="showSection('lebenslauf')">IT Kentnisse</a>
+      <a href="#lebenslauf" onclick="showSection('lebenslauf')">IT Kenntnisse</a>
   </nav>
 
 <main class="gradient-box">
   <section id="home" class="active">
-    <h2>Willkommen</h2>
+    <h2> </h2>
     <div class="grid">
       <div class="item-home">
         <p>
           Willkommen auf meiner Website!<br>
-          Auf dieser Website werden persönliche Informationen über mich dargestellt.<br>
-          Du siehst zum Beispiel Projekte, die ich erstellt habe und Tools mit denen ich gearbeitet habe.<br>
+          Hier erfährst du über meine Arbeiten, meine Kenntnisse und die Module, die ich bearbeitet habe.<br><br>
           Ich wünsche dir viel Spass beim Durchstöbern meiner Website.
         </p>
-        <P>Diese Website habe ich zusammen mit Elias Spycher erstellt</P>
+        <P>Diese Website habe ich in Zusammenarbeit mit Robin Sacher erstellt</P>
       </div>
 
     </div>
@@ -231,9 +230,9 @@
       </div>
 
       <div class="item">
-        <h3>JetBrains PyCharm</h3>
-        <img src="Pictures/JetBrainsPyCharmLogo.png" alt="PyCharm Logo">
-        <p>In JetBrains PyCharm haben wir unterschiedliche Projekte mit Python implementiert.</p>
+        <h3>Android Studio</h3>
+        <img src="Pictures/AndroidStudioLogo.png" alt="Android Studio Logo">
+        <p>Mittels Android Studio in Kotlin bearbeite ich Apps.</p>
       </div>
 
       <div class="item">
@@ -275,7 +274,9 @@
   </section>
   <section id="lebenslauf">
     <h2>IT Kenntnisse</h2>
-    <p>Hier sind meine IT Kenntnisse ersichtlich</p>
+    <p>Hier sind meine IT Kenntnisse ersichtlich<br>
+        Die Module, die ich an der Informatikmittelschule Baden bearbeitet habe, sind hier aufgelistet.
+    </p>
     <div class="timeline">
       <div class="container left">
         <div class="content">
